# SobelFilter

./: CMakeLists.txt  readme.md
src/: Sobel.cpp  Sobel.h  main.cpp
